# stock-radar

./: README.md  pyproject.toml
.github/workflows/: 0050-news-radar.yml
config/: constituents_0050.json
src/tw0050_radar/: __init__.py  radar.py
